DE2712: Payee Details - Account field DE2711: Payee Details - Nickname field DE2714: Payee Details - Re-Enter Account # field DE2724: Payee Details - keyboard not developed well for landscape DE2708: Payee Details - Page Elements - Several cosmetic issues
Tested:
- Verified Account Editable Field matches the width of the screen
- Verified Help icon is centered and aligned with LOG OUT.
- Verified Payee Details and Payee Added margins match comps
- Verified borders around cells in Payee Details and Payee Added are visible
- Verified String Towards the bottom, under "Verified Payee Address", the text starts with "This payee is..." -- capitalize 'payee'.
- Verified  "Zip Code" cell is shown for Managed Payees that require it.
- Verified keyboard re-opens and editable field has focus on orientation change for all fields in Payee Details page
- Verified  "Need Help?", along with the phone number and Provide Feedback are not shown for Payee Details

--- a/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/home_list_item_no_stroke" >
+    android:layout_marginBottom="@dimen/forms_inner_padding"
+    android:orientation="vertical" >
 
     <View
         android:id="@+id/divider_line"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/list_item"
-        android:background="@drawable/table_dotted_line" />
+        android:layout_height="1dp"
+        android:background="@drawable/table_solid_line" />
 
     <RelativeLayout
         android:id="@+id/list_item"
@@ -17,14 +17,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/forms_inner_padding"
         android:layout_marginRight="@dimen/forms_inner_padding"
-        android:paddingBottom="@dimen/forms_inner_padding"
-        android:paddingTop="@dimen/forms_inner_padding" >
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/forms_inner_padding" >
 
         <TextView
             android:id="@+id/top_label"
             style="@style/field_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/forms_inner_padding"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:singleLine="true"
@@ -38,7 +39,7 @@
             android:layout_alignLeft="@+id/top_label"
             android:layout_below="@+id/top_label"
             android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:layout_toLeftOf="@+id/edit_label"
+            android:layout_toLeftOf="@+id/caret"
             android:singleLine="true"
             android:text="@string/edit" />
 
@@ -49,8 +50,8 @@
             android:layout_alignLeft="@+id/top_label"
             android:layout_below="@+id/middle_label"
             android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:layout_toLeftOf="@+id/edit_label"
-            android:imeOptions="actionDone"
+            android:layout_toLeftOf="@+id/caret"
+            android:imeOptions="flagNoExtractUi|actionDone"
             android:inputType="textNoSuggestions"
             android:singleLine="true"
             android:textCursorDrawable="@null" />
@@ -72,6 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:paddingRight="@dimen/between_related_elements_padding"
             android:contentDescription="@string/caret_description"
             android:src="@drawable/blue_arrow_right" />
     </RelativeLayout>
