DE2689 Updated continue button so that it does not move when submitting an entry with error

--- a/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_enter_payee.xml
@@ -58,7 +58,7 @@
 	   
 	     <TextView
 	         android:id="@+id/error_text"
-	         style="@style/error_label"
+	         style="@style/payee_error_label"
 	         android:layout_below="@+id/search_field"
 	         android:layout_width="fill_parent"
 	         android:layout_height="wrap_content" 
