--- a/Discover-Commons/res/values/styles.xml
+++ b/Discover-Commons/res/values/styles.xml
@@ -143,6 +143,11 @@
         <item name="android:visibility">gone</item>     
 		<item name="android:textSize">@dimen/body_copy_min</item>
     </style>
+    <style name="payee_error_label" parent="discover_text">
+        <item name="android:textColor">@color/error_indicator</item>
+        <item name="android:visibility">invisible</item>     
+		<item name="android:textSize">@dimen/body_copy_min</item>
+    </style>
 
     <style name="edit_copy" parent="discover_text"></style>
     
