UAT Integration Fixes

--- a/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
+++ b/Discover-Bank-Phone/res/layout/bank_one_button_layout.xml
@@ -8,6 +8,8 @@
 
     <com.discover.mobile.bank.ui.widgets.BankHeaderProgressIndicator
        android:id="@+id/header"
+       android:layout_marginLeft="@dimen/forms_inner_padding"
+       android:layout_marginRight="@dimen/forms_inner_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
 
