ID: DE2700 Name: Enter Payee Name - Page Elements - saving search value incorrectly
Tested:
Tested by running several back to back searches with both valid and invalid search criteria

--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/light_gray_bkgrd"
         android:paddingBottom="@dimen/forms_inner_padding"
-        android:paddingLeft="@dimen/forms_inner_padding">
+        android:paddingLeft="@dimen/forms_inner_padding"
+        android:paddingRight="@dimen/forms_inner_padding">
 
         <ImageButton
             android:id="@+id/help"
