--- a/Discover-Bank-Phone/res/layout/amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/amount_list_item.xml
@@ -7,23 +7,25 @@
 
     <TextView
         android:id="@+id/top_label"
-        style="@style/field_copy"
+        style="@style/small_copy"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
         android:singleLine="true"
-        android:text="@string/edit" />
+        android:textStyle="bold"
+        android:text="@string/bank_deposit_amount" />
 
+    <TextView
+        android:id="@+id/dollar_sign"
+        android:layout_below="@+id/top_label"
+        android:layout_above="@+id/error_label"
+ 		style="@style/dollar_sign_style"/>
+    
     <com.discover.mobile.bank.deposit.AmountValidatedEditField
         android:id="@+id/editable_field"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/input_field_height"
-        android:layout_below="@+id/top_label"
-        android:imeOptions="actionDone"
-        android:inputType="numberDecimal"
-        android:singleLine="true"
-        android:textCursorDrawable="@null" />
+        style="@style/amount_style"/>
 
     <TextView
         android:id="@+id/error_label"
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/editable_field"
         android:singleLine="true"
+        android:visibility="invisible"
         android:text="@string/bank_invalid_characters" />
 
 </RelativeLayout>
