--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -11,5 +11,6 @@
     <string name="atm_location_modal_service_content">Temp off string of content</string>
     <string name="atm_location_modal_settings">Settings</string>
     <string name="atm_location_modal_cancel">Cancel</string>
+    <string name="atm_location_get_directions">Get Directions %s M</string>
     
 </resources>
