--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -102,5 +102,6 @@
         <item name="android:inputType">numberDecimal</item>
         <item name="android:ems">8</item>
         <item name="android:singleLine">true</item>
+        <item name="android:textCursorDrawable">@null</item>
     </style>
 </resources>
