ID: US6000 - Select Amount
Tested:
- Tested Numeric keypad pops open upon view launch
- Verified Blinking cursor in entry field
- Tested Deposit Amount field will update simultaneously as user types in the amount
- Tested Match comps formatting if user does not match formatting
- Tested Add decimals to the field if user does not input decimals
- Tested Add commas after every three number
- Tested User has access to help (Separate user story)
- Tested User has access to "Need Help" call link
- Tested navigating to Select Amount after 1st visit to use cached values for an account.
Tested If user taps outside of the keypad without typing in numbers show there is no amount in the entry field (see "No Amount" screen shot)
- Tested Clear all text when  X is hit
- Tesed Orientation change
- Tested Close keyboard when user logs out or receives a 401 Invalid token

Service Call Test Cases:
Test 400 (Bad Request) The id provided is invalid
Test 401 (Unauthorized) - request has no authentication token, or it has expired
Test 401 Strong Auth Challenge
Test 404 (Not Found) - The account requested does not exist OR is not a deposit account
Test 500 (technical difficulty)
Test 503 (system maintenance)
Test No Connectivity

Client-side field Validations:
Verified inline error is red and wraps around
Verified that Field max = 8 characters (including decimal e.g. $25,000.00)
Verified Mask numbers to follow the format: $25,000.00
Verified that an empty value is not allowed and shows Invalid amount.
Evaluating limits in this order Monthly Amount, Monthly Count, Daily Amount, Transaction Amount, Daily Count.
Verified that if Max Monthly Deposit Count is exceeded the inline error provided from server is shown with limit embedded.
Verified that if Max Monthly Deposit Amount  is exceeded the inline error provided from server is shown with limit embedded.
Verified that if Max Daily Deposit Count is exceeded the inline error provided from server is shown with limit embedded.
Verified that if

--- a/Discover-Bank-Phone/res/layout/amount_list_item.xml
+++ b/Discover-Bank-Phone/res/layout/amount_list_item.xml
@@ -33,8 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editable_field"
-        android:singleLine="true"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:text="@string/bank_invalid_characters" />
 
 </RelativeLayout>
