--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -10,7 +10,9 @@
     <string name="bank_deposit_amount_hint">0.00</string>
     <string name="bank_deposit_invalid_amount">Invalid amount</string>
     <string name="bank_deposit_unknown_limit">We\'re sorry. We are unable to determine a valid limit.</string>
-    
+    <string name="bank_deposit_forbidden_title">Mobile Check\nDeposit Unavailable</string>
+    <string name="bank_deposit_forbidden_message">Please contact us for assistance in accessing the Mobile Check Deposit feature.</string>
+    <string name="bank_deposit_forbidden_number">1-800-450-7067</string>
     <string name="capture">Capture</string>
     <string name="picture_confirm">Confirm</string>
     <string name="front">Front</string>
