US6593 - Progress so far on new Card/Bank Login toggle buttons

--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -13,10 +13,10 @@
         Forgot User ID/Password?
     </string>
     <string name="card">
-        Card
+        Card Login
     </string>
     <string name="bank">
-        Bank
+        Bank Login
     </string>
     <string name="go_to">
         Go to:
