--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -49,8 +49,8 @@
     <style name="login_white_pane">
         <item name="android:layout_marginLeft">@dimen/forms_inner_padding</item>
         <item name="android:layout_marginRight">@dimen/forms_inner_padding</item>
-        <item name="android:padding">30dp</item>
-        <item name="android:background">@drawable/login_white_bkgrd</item>
+        
+        <item name="android:background">@drawable/login_white_panel</item> <!-- bkgrnd -->
     </style>
    
 </resources>
