US6593 - TA13920 - Updates to Error label on Login; changed visibility.

--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -67,7 +67,7 @@
                     android:layout_marginTop="@dimen/groups_of_elements_padding"
                     android:paddingLeft="@dimen/element_side_padding"
                     android:paddingRight="@dimen/element_side_padding"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:gravity="center_horizontal" />
 
                 <TextView
