--- a/Discover-Bank-Phone/res/layout/login_start.xml
+++ b/Discover-Bank-Phone/res/layout/login_start.xml
@@ -133,18 +133,17 @@
 
                 <ImageView
                     android:id="@+id/remember_user_id_button"
-                    android:layout_width="25dip"
-                    android:layout_height="25dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_below="@+id/password_field"
                     android:layout_marginLeft="5dip"
                     android:layout_marginRight="@dimen/element_side_padding"
                     android:layout_marginTop="14dp"
-                    android:background="@drawable/gray_gradient_square"
                     android:contentDescription="@string/remember_user_id"
+                    android:clickable="true"
                     android:onClick="toggleCheckBoxFromXml"
-                    android:padding="5dip"
-                    android:src="@drawable/transparent_square" />
+                    android:padding="5dip" />
 
                 <!-- idk if this is coming back yet...
                      <TextView
