--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -12,5 +12,7 @@
     <string name="atm_location_modal_settings">Settings</string>
     <string name="atm_location_modal_cancel">Cancel</string>
     <string name="atm_location_get_directions">Get Directions %s M</string>
+    <string name="atm_location_search_help">Search ATM Locations</string>
+    <string name="atm_location_surcharge_free">Only display surcharge-free ATMs</string>
     
 </resources>
