US6724 - Android: Schedule Payment Error Handling - Development
 Note: For the following used mock service and made assumptions on what the name of error field would be. Used a sample of the error JSON using memo and the actual service.

Test Cases:
- Verified multiline inline error for Payee Cell renders correctly  and displays error sent from service.
- Verified multiline inline error for Pay From renders correctly and displays error sent from service
- Verified multiline inline error for Amount renders correctly and displays error sent from service
- Verified multiline inline error for Delivered By renders correctly and displays error sent from service
- Verified multiline inline error for Memo renders correctly and displays error sent from service
- Verified multiline inline error not for a cell, but for entire page renders correctly above page. Done only for 422 and no other error code.
- Verified errors are cleared if use navigates away and back to the page using back press
- Verified each field clears its respective inline error when given focus

--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -39,10 +39,14 @@
         <item name="android:background">@drawable/rounded_table_corners_no_padding</item>
     </style>
     
-        <style name="schedule_pay_list_element">
-        <item name="android:padding">7dp</item>
+    <style name="schedule_pay_list_element">
+        <item name="android:paddingTop">@dimen/forms_inner_padding</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:paddingLeft">@dimen/forms_inner_padding</item>
+        <item name="android:paddingRight">@dimen/forms_inner_padding</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/listview_vertical_height</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">@dimen/listview_vertical_height</item>
         <item name="android:background">@drawable/home_list_item_no_stroke_padding</item>
     </style>
         
