--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -63,4 +63,5 @@
  	<string name="schedule_pay_date_picker_title">Enter Payment Date</string>
  	<string name="schedule_pay_duplicate_payment">Duplicate Payment</string>
  	<string name="schedule_pay_invalid_date">Invalid Date</string>
+ 	<string name="schedule_pay_amount_hint">0.00</string>
 </resources>
