--- a/Discover-Bank-Phone/res/layout/bank_atm_map.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_map.xml
@@ -18,6 +18,14 @@
         android:layout_height="wrap_content" 
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"/>
+    
+    <ImageButton
+        android:id="@+id/help"
+        style="@style/orange_help_button"
+        android:layout_width="@dimen/orange_help_button_size"
+        android:layout_height="@dimen/orange_help_button_size"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" />
 
     <LinearLayout
         android:id="@+id/map_navigation_panel"
