--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -145,34 +145,21 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/schedule_pay_amount" />
-
-                     <TextView
+                        android:text="@string/schedule_pay_amount" /><TextView
+                        style="@style/field_copy_big"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/field_copy_big"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:paddingRight="3dp"
-                        android:text="$"
+                        android:text="@string/bank_dollar_sign"
                         android:textColor="@color/black" />
-                     
-                    <com.discover.mobile.common.ui.widgets.SchedulePaymentAmountEditText
-                        android:id="@+id/amount_edit"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="2"
-                        android:background="@drawable/edit_text_default"
-                        android:ems="10"
-                        android:imeOptions="actionDone"
-                        android:singleLine="true"
-                        android:textColor="@color/black"
-                        android:padding="7dp"
-                        android:hint="@string/bank_deposit_amount_hint"
-                        android:textCursorDrawable="@null" >
 
-                        <requestFocus />
-                    </com.discover.mobile.common.ui.widgets.SchedulePaymentAmountEditText>            
+                    <com.discover.mobile.bank.ui.widgets.AmountValidatedEditField
+                        android:id="@+id/amount_edit"
+                        style="@style/pmt_amount_style" >
+                    </com.discover.mobile.bank.ui.widgets.AmountValidatedEditField>
+                            
                 </LinearLayout>
 
                 <TextView
