--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -106,4 +106,14 @@
         <item name="android:textCursorDrawable">@null</item>
         <item name="android:hint">@string/bank_deposit_amount_hint</item>
     </style>
+    
+   <style name="pmt_amount_style" parent="amount_style">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:background">@drawable/edit_text_default</item>
+        <item name="android:ems">10</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:padding">7dp</item>
+    </style>
+   
 </resources>
