--- a/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_locator_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <fragment class="com.discover.mobile.bank.atm.AtmMapFragment"
+    <fragment class="com.discover.mobile.bank.atm.SearchNearbyFragment"
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="0dp" 
