US6461 : TA13657 - Create how it works modal. Added the how it works modal to the select account screen on check deposit. This modal is presented after a user accepts the terms and conditions and they are navigated to the select account screen. After this first presentation the only way to view it again is to access it from the help menu button.

--- a/Discover-Bank-Phone/res/layout/bank_header_progress.xml
+++ b/Discover-Bank-Phone/res/layout/bank_header_progress.xml
@@ -87,8 +87,8 @@
 
 		<ImageView
 	        android:id="@+id/help_view"
-	        android:layout_width="@dimen/orange_help_button_size"
-	        android:layout_height="@dimen/orange_help_button_size"	        
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"	        
 	        android:layout_centerVertical="true"
 	        android:layout_alignParentRight="true"
 	        android:layout_marginLeft="@dimen/breadcrumb_help_leftpadding"
