--- a/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
+++ b/Discover-Bank-Phone/res/layout/payment_terms_and_conditions.xml
@@ -24,8 +24,8 @@
         <ImageButton
             android:id="@+id/help"
             style="@style/orange_help_button"
-            android:layout_width="@dimen/orange_help_button_size"
-            android:layout_height="@dimen/orange_help_button_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:contentDescription="@string/empty" />
