--- a/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
+++ b/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/search"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,8 +20,8 @@
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:background="@drawable/atm_search_bar_background"
         android:focusable="true"
         android:focusableInTouchMode="true"
@@ -36,7 +36,6 @@
             android:layout_alignParentTop="true"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
             android:layout_marginLeft="@dimen/forms_inner_padding"
-            android:layout_marginRight="@dimen/forms_inner_padding"
             android:layout_marginTop="@dimen/search_bar_arrow_margin_top"
             android:alpha=".5"
             android:background="@drawable/drk_blue_arrow_left_square" />
@@ -55,9 +54,12 @@
             android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_alignTop="@+id/help_dummy"
+            android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:layout_marginTop="@dimen/between_related_elements_padding"
             android:layout_toLeftOf="@+id/help_dummy"
             android:layout_toRightOf="@+id/search_show"
             android:background="@drawable/edit_text_default"
