--- a/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
+++ b/Discover-Bank-Phone/res/layout/bank_atm_search_nearby.xml
@@ -12,13 +12,21 @@
         android:layout_alignParentTop="true"
         class="com.google.android.gms.maps.SupportMapFragment" />
 
+    <fragment
+        android:id="@+id/discover_list_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/map_navigation_panel"
+        android:layout_alignParentTop="true"
+        class="com.discover.mobile.bank.ui.fragments.BankUnderDevelopmentFragment" />
+
     <com.discover.mobile.bank.atm.AtmLocatorMapSearchBar
         android:id="@+id/full_search_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"/>
-    
+        android:layout_alignParentRight="true" />
+
     <ImageButton
         android:id="@+id/help"
         style="@style/orange_help_button"
